github actions trial

--- a/BlogProject/Views/Home/Index.cshtml
+++ b/BlogProject/Views/Home/Index.cshtml
@@ -1028,7 +1028,7 @@
         <div class="container">
             <h1 class="hero-title">Thoughts, Stories & Ideas</h1>
             <p class="hero-subtitle">A minimalist blog about technology, design, and the intersection between them.</p>
-            <a href="#" class="hero-cta">Start Reading</a>
+            <a href="#" class="hero-cta">Start Reading with kayas.</a>
         </div>
     </section>
 
